--- a/GoGallery/Base.lproj/Main.storyboard
+++ b/GoGallery/Base.lproj/Main.storyboard
@@ -1,11 +1,27 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="gxU-AK-pTR">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
+        <!--Navigation Controller-->
+        <scene sceneID="mxp-G7-Eby">
+            <objects>
+                <navigationController id="gxU-AK-pTR" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="PuM-eY-nEw">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="qvI-bZ-2vG"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="a5T-sg-3ma" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1194" y="-93"/>
+        </scene>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
@@ -19,21 +35,21 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="305" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="W1U-QV-GyB">
-                                <rect key="frame" x="20" y="20" width="560" height="580"/>
+                                <rect key="frame" x="20" y="64" width="560" height="536"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Cell" rowHeight="305" id="dpR-yQ-TQc" customClass="MyCell">
-                                        <rect key="frame" x="0.0" y="28" width="560" height="305"/>
+                                        <rect key="frame" x="0.0" y="92" width="560" height="305"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="dpR-yQ-TQc" id="ycO-Wa-PPS">
                                             <rect key="frame" x="0.0" y="0.0" width="560" height="304"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="EeE-p8-CMN">
-                                                    <rect key="frame" x="8" y="8" width="544" height="288"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="560" height="304"/>
                                                 </imageView>
                                                 <view alpha="0.75" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ci0-hR-4Ln">
-                                                    <rect key="frame" x="8" y="146" width="544" height="150"/>
+                                                    <rect key="frame" x="0.0" y="154" width="560" height="150"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kcQ-SX-eE7">
                                                             <rect key="frame" x="8" y="10" width="53" height="20"/>
@@ -76,13 +92,13 @@
                                                 </view>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstAttribute="trailingMargin" secondItem="ci0-hR-4Ln" secondAttribute="trailing" id="Cev-Ot-IjE"/>
-                                                <constraint firstItem="EeE-p8-CMN" firstAttribute="top" secondItem="ycO-Wa-PPS" secondAttribute="topMargin" id="JE5-6M-Aaa"/>
-                                                <constraint firstItem="EeE-p8-CMN" firstAttribute="leading" secondItem="ycO-Wa-PPS" secondAttribute="leadingMargin" id="VbH-W6-zqS"/>
-                                                <constraint firstAttribute="bottomMargin" secondItem="ci0-hR-4Ln" secondAttribute="bottom" id="Yq8-3V-hDD"/>
-                                                <constraint firstAttribute="trailingMargin" secondItem="EeE-p8-CMN" secondAttribute="trailing" id="pmK-a1-WfD"/>
-                                                <constraint firstAttribute="bottomMargin" secondItem="EeE-p8-CMN" secondAttribute="bottom" id="yP7-WY-Uy0"/>
-                                                <constraint firstItem="ci0-hR-4Ln" firstAttribute="leading" secondItem="ycO-Wa-PPS" secondAttribute="leadingMargin" id="zmi-5E-TGq"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="ci0-hR-4Ln" secondAttribute="trailing" constant="-8" id="Cev-Ot-IjE"/>
+                                                <constraint firstItem="EeE-p8-CMN" firstAttribute="top" secondItem="ycO-Wa-PPS" secondAttribute="topMargin" constant="-8" id="JE5-6M-Aaa"/>
+                                                <constraint firstItem="EeE-p8-CMN" firstAttribute="leading" secondItem="ycO-Wa-PPS" secondAttribute="leadingMargin" constant="-8" id="VbH-W6-zqS"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="ci0-hR-4Ln" secondAttribute="bottom" constant="-8" id="Yq8-3V-hDD"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="EeE-p8-CMN" secondAttribute="trailing" constant="-8" id="pmK-a1-WfD"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="EeE-p8-CMN" secondAttribute="bottom" constant="-8" id="yP7-WY-Uy0"/>
+                                                <constraint firstItem="ci0-hR-4Ln" firstAttribute="leading" secondItem="ycO-Wa-PPS" secondAttribute="leadingMargin" constant="-8" id="zmi-5E-TGq"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
@@ -107,10 +123,95 @@
                             <constraint firstAttribute="trailingMargin" secondItem="W1U-QV-GyB" secondAttribute="trailing" id="sjg-6I-JCq"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="nsZ-Wp-aob"/>
+                    <connections>
+                        <segue destination="Fp0-8j-zNu" kind="show" identifier="ShowMyDetail" id="cih-St-2UT"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="261" y="354"/>
+            <point key="canvasLocation" x="-493" y="-88"/>
+        </scene>
+        <!--Exhibition DescriptionVC-->
+        <scene sceneID="mWG-x9-3LR">
+            <objects>
+                <viewController id="Fp0-8j-zNu" customClass="ExhibitionDescriptionVC" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Amg-BB-mac"/>
+                        <viewControllerLayoutGuide type="bottom" id="FBW-B6-HPD"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="gCz-b5-Xlx">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4GZ-az-hqT">
+                                <rect key="frame" x="0.0" y="64" width="600" height="536"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wTu-0w-1VH">
+                                        <rect key="frame" x="0.0" y="0.0" width="600" height="150"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Here and there" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zmb-Lj-eeq">
+                                                <rect key="frame" x="8" y="8" width="584" height="39"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Keren Cytter" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="44C-s5-SyT">
+                                                <rect key="frame" x="8" y="55" width="584" height="40"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="26.02.15-18.04.2015" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9kB-p0-ypM">
+                                                <rect key="frame" x="8" y="103" width="584" height="39"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <color key="textColor" red="0.18803269853154361" green="0.36612472576644289" blue="0.085718322759999993" alpha="1" colorSpace="calibratedRGB"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <color key="backgroundColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="150" id="0Jx-XS-H8O"/>
+                                            <constraint firstAttribute="bottom" secondItem="9kB-p0-ypM" secondAttribute="bottom" constant="8" id="9WX-Lg-av5"/>
+                                            <constraint firstItem="9kB-p0-ypM" firstAttribute="leading" secondItem="wTu-0w-1VH" secondAttribute="leading" constant="8" id="AIP-SU-fjw"/>
+                                            <constraint firstItem="44C-s5-SyT" firstAttribute="leading" secondItem="wTu-0w-1VH" secondAttribute="leading" constant="8" id="DN4-vv-hpc"/>
+                                            <constraint firstAttribute="trailing" secondItem="44C-s5-SyT" secondAttribute="trailing" constant="8" id="GiI-SI-F5x"/>
+                                            <constraint firstItem="9kB-p0-ypM" firstAttribute="top" secondItem="44C-s5-SyT" secondAttribute="bottom" constant="8" id="HhX-If-Ph3"/>
+                                            <constraint firstAttribute="trailing" secondItem="zmb-Lj-eeq" secondAttribute="trailing" constant="8" id="Msw-SB-f74"/>
+                                            <constraint firstItem="9kB-p0-ypM" firstAttribute="height" secondItem="zmb-Lj-eeq" secondAttribute="height" id="PUv-Sh-1AH"/>
+                                            <constraint firstAttribute="trailing" secondItem="9kB-p0-ypM" secondAttribute="trailing" constant="8" id="Y6q-OL-JmA"/>
+                                            <constraint firstItem="zmb-Lj-eeq" firstAttribute="top" secondItem="wTu-0w-1VH" secondAttribute="top" constant="8" id="eFI-ni-Ms5"/>
+                                            <constraint firstItem="44C-s5-SyT" firstAttribute="top" secondItem="zmb-Lj-eeq" secondAttribute="bottom" constant="8" id="igX-tX-DnD"/>
+                                            <constraint firstItem="zmb-Lj-eeq" firstAttribute="leading" secondItem="wTu-0w-1VH" secondAttribute="leading" constant="8" id="kTd-K6-E5l"/>
+                                            <constraint firstItem="44C-s5-SyT" firstAttribute="height" secondItem="zmb-Lj-eeq" secondAttribute="height" id="qEm-zT-cwA"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="wTu-0w-1VH" firstAttribute="top" secondItem="4GZ-az-hqT" secondAttribute="top" id="0LA-Kz-VnQ"/>
+                                    <constraint firstItem="wTu-0w-1VH" firstAttribute="leading" secondItem="4GZ-az-hqT" secondAttribute="leading" id="2Hn-fH-P90"/>
+                                    <constraint firstAttribute="bottom" secondItem="wTu-0w-1VH" secondAttribute="bottom" constant="20" id="AbJ-Rx-y9g"/>
+                                    <constraint firstItem="wTu-0w-1VH" firstAttribute="centerX" secondItem="4GZ-az-hqT" secondAttribute="centerX" id="IW1-KM-j85"/>
+                                    <constraint firstAttribute="trailing" secondItem="wTu-0w-1VH" secondAttribute="trailing" id="rYr-MI-rd6"/>
+                                </constraints>
+                            </scrollView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="4GZ-az-hqT" firstAttribute="leading" secondItem="gCz-b5-Xlx" secondAttribute="leading" id="Yy0-4L-kYk"/>
+                            <constraint firstItem="4GZ-az-hqT" firstAttribute="top" secondItem="Amg-BB-mac" secondAttribute="bottom" id="fhB-HJ-5ex"/>
+                            <constraint firstAttribute="trailing" secondItem="4GZ-az-hqT" secondAttribute="trailing" id="hRj-jF-Ov5"/>
+                            <constraint firstItem="FBW-B6-HPD" firstAttribute="top" secondItem="4GZ-az-hqT" secondAttribute="bottom" id="jt7-DQ-ML0"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="nameAuthor" destination="44C-s5-SyT" id="xKn-3p-MJK"/>
+                        <outlet property="nameExhibition" destination="zmb-Lj-eeq" id="us6-PJ-X3C"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="UBS-GA-Bbk" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="264" y="-119"/>
         </scene>
     </scenes>
 </document>
